<resources>
    <string name="app_name">Late4Class</string>
    <string name="welcome_1">WELCOME!</string>
    <string name="welcome_2">to</string>
    <string name="intro1">Simple, interactive and convenient</string>
    <string name="intro2">class management system</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="rememberme">Remember me</string>
    <string name="forgot">Forgot password?</string>
    <string name="noaccount">Haven\'t got an account yet?</string>
    <string name="signup">Sign Up</string>
    <string name="createaccount">Create Account</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="timetable">Timetable</string>
    <string name="_class">Class</string>
    <string name="reminder">Reminder</string>
    <string name="assignment">Assignment</string>
    <string name="announcement">Announcement</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="register">Register</string>
    <string name="ClassGroup">Class Group</string>
    <string name="btnJoinClass">join class button</string>
</resources>
