<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/AppLogo"
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="17dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/appname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003"></ImageView>

    <EditText
        android:id="@+id/email_fill"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="18dp"
        android:autofillHints=""
        android:background="@drawable/login_fill"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/buttonColor_pink"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password_fill"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:autofillHints=""
        android:background="@drawable/login_fill"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/buttonColor_pink"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_fill" tools:targetApi="o"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="309dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="50dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/textColor_White"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/email_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppLogo" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@android:style/Widget.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="42dp"
        android:text="@string/rememberme"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_fill" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot"
        android:textColor="@color/textColor_White"
        android:textSize="14sp"
        app:fontFamily="@font/calibri_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>