<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="309dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/welcome_button"
        android:shadowColor="#000000"
        android:shadowDx="20"
        android:shadowDy="80"
        android:text="@string/createaccount"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regis_confirm_password" />

    <TextView
        android:id="@+id/createTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/createaccount"
        android:textColor="@color/textColor_White"
        android:textSize="30sp"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/FirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/regis_firstName"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_fill"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/buttonColor_pink"
        android:textColorHint="@color/hintColor_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstName"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/FirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/firstname"
        android:textColor="@color/buttonColor_pink"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/regis_firstName"
        app:layout_constraintStart_toStartOf="@+id/regis_firstName"
        app:layout_constraintTop_toBottomOf="@+id/createTitle" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/lastname"
        android:textColor="@color/buttonColor_pink"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/regis_lastName"
        app:layout_constraintStart_toStartOf="@+id/regis_lastName"
        app:layout_constraintTop_toBottomOf="@+id/regis_firstName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/email"
        android:textColor="@color/buttonColor_pink"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/regis_email"
        app:layout_constraintStart_toStartOf="@+id/regis_email"
        app:layout_constraintTop_toBottomOf="@+id/regis_lastName" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/password"
        android:textColor="@color/buttonColor_pink"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/regis_password"
        app:layout_constraintStart_toStartOf="@+id/regis_password"
        app:layout_constraintTop_toBottomOf="@+id/regis_email" />

    <TextView
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/confirmpass"
        android:textColor="@color/buttonColor_pink"
        app:fontFamily="@font/calibri_bold"
        app:layout_constraintBottom_toTopOf="@+id/regis_confirm_password"
        app:layout_constraintStart_toStartOf="@+id/regis_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/regis_password" />

    <EditText
        android:id="@+id/regis_lastName"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_fill"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/buttonColor_pink"
        android:textColorHint="@color/hintColor_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/regis_email"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_fill"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/buttonColor_pink"
        android:textColorHint="@color/hintColor_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/regis_password"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_fill"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/buttonColor_pink"
        android:textColorHint="@color/hintColor_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/regis_confirm_password"
        android:layout_width="309dp"
        android:layout_height="46dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_fill"
        android:ems="10"
        android:hint="@string/confirmpass"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/buttonColor_pink"
        android:textColorHint="@color/hintColor_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>